--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,10 @@ server {
     location /static/ {
         alias /usr/src/app/static/;
     }
+    location /static/media_slovenia/ {
+        root /usr/src/app/media/media_slovenia/;
+    }
+
     location /media/ {
         root /usr/src/app/media/;
     }
