--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,4 +38,8 @@ server {
     location /media/ {
         root /usr/src/app/media/;
     }
+
+    location /image/ {
+        root /usr/src/app/image/;
+    }
 }
