--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,15 +31,12 @@ server {
     location /static/ {
         alias /usr/src/app/static/;
     }
+
     location /static/media_slovenia/ {
-        root /usr/src/app/media/media_slovenia/;
+        alias /usr/src/app/static/media_slovenia/;
     }
 
     location /media/ {
         root /usr/src/app/media/;
-    }
-
-    location /image/ {
-        root /usr/src/app/image/;
     }
 }
